[package]
name = "metermaid"
version = "0.1.1"
description = "MeterMaid — LUFS / loudness meter"
authors = ["David Neal <david@reverentgeek.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/reverentgeek/metermaid"
homepage = "https://github.com/reverentgeek/metermaid"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "metermaid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
ebur128 = "0.1"
rustfft = "6"
ringbuf = "0.4"

